# TOP5_hot_AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
app/: __init__.py  main.py
app/api/: errors.py  routes_admin.py  routes_rankings.py  routes_repos.py  serializers.py
app/core/: config.py  dates.py  json.py
app/db/: models.py  session.py
app/github/: __init__.py  client.py  collector.py  mock_data.py  normalizer.py  queries.py
app/ranking/: __init__.py  pipeline.py  reports.py  scoring.py
app/web/: routes.py
app/web/static/: app.css  app.js
app/web/templates/: base.html  compare.html  index.html  methodology.html  (+3 more)
public-data/: ranking-weeks.json  rankings-2026-04-27.json  rankings-2026-05-04.json  rankings-2026-05-11.json  rankings-2026-05-18.json  rankings-2026-05-25.json  rankings-2026-06-01.json  rankings-2026-06-08.json  rankings-2026-06-15.json  rankings-2026-06-22.json  rankings-2026-06-29.json  rankings-latest.json  weekly-2026-04-27.csv  weekly-2026-04-27.md  weekly-2026-05-04.csv  weekly-2026-05-04.md  weekly-2026-05-11.csv  weekly-2026-05-11.md  weekly-2026-05-18.csv  weekly-2026-05-18.md  weekly-2026-05-25.csv  weekly-2026-05-25.md  weekly-2026-06-01.csv  weekly-2026-06-01.md  weekly-2026-06-08.csv  weekly-2026-06-08.md  weekly-2026-06-15.csv  weekly-2026-06-15.md  weekly-2026-06-22.csv  weekly-2026-06-22.md  weekly-2026-06-29.csv  weekly-2026-06-29.md
scripts/: backfill.py  build_static_site.py  collect_weekly.py
tests/: test_normalizer.py  test_scoring.py
(+1 files in other folders)
